# Dataiku

./: .pre-commit-config.yaml  README.md
backend/: Dockerfile  app.py  database.py  give-me-the-odds.py  give_me_the_odds.py  lib.py  models.py  pyproject.toml  run.bash  run.py
backend/app/: app.py  database.py  lib.py  models.py
backend/tests/: test_app.py  test_database.py  test_lib.py  test_models.py
frontend/: package.json  pnpm-lock.yaml
frontend/public/: index.html
frontend/src/: App.tsx  index.css  index.tsx  spaceChart.tsx  theme.ts
frontend/src/models/: models.ts
frontend/src/services/: hooks.ts  http.ts
