[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Martin <martin-guyard@live.fr>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.81.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
