[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Martin <martin-guyard@live.fr>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.81.0"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.971"
flake8 = "^5.0.4"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
